Add docker-compose.yml